<resources>
    <string name="app_name">BeepBeep</string>
    <string name="title_activity_maps">Map</string>
    <string name="signupPrompt">Don\'t have an account?</string>
    <string name="usernameInputHint">Username</string>
    <string name="passwordInputHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="rider">"Rider "</string>
    <string name="driver">Driver</string>
    <string name="signup">Signup</string>
    <string name="phone_number">Phone Number</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="confirm_amount">Confirm Amount</string>
    <string name="please_enter_amount">Please Enter Amount</string>
    <string name="qrbuck">QRBUCK</string>
    <string name="confirm">Confirm</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="balance">Balance:</string>
    <string name="add_money">Add Money</string>
    <string name="make_payment">Make Payment</string>
    <string name="receive_payment">Receive Payment</string>
    <string name="please_wait">Please Wait ...</string>
    <string name="tip">Tip:</string>
    <string name="price_x">Price: $x</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
