<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Wallet">

    <TextView
        android:id="@+id/Wallet_BalanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="15dp"
        android:text="@string/balance"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/Wallet_BalanceDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Wallet_BalanceDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/please_wait"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/Wallet_amountEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Wallet_BalanceText" />

    <Button
        android:id="@+id/Wallet_AddBalanceButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/add_money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Wallet_amountEntry" />

    <Button
        android:id="@+id/Wallet_MakePaymentButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/make_payment"
        app:layout_constraintEnd_toStartOf="@+id/Wallet_ReveivePaymentButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Wallet_AddBalanceButton" />

    <Button
        android:id="@+id/Wallet_ReveivePaymentButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/receive_payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Wallet_MakePaymentButton"
        app:layout_constraintTop_toBottomOf="@+id/Wallet_AddBalanceButton" />

    <EditText
        android:id="@+id/Wallet_amountEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>